<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/cardview_default_elevation"
    android:layout_weight="1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kaeuchoa.controlefinanceiro.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_frag_origem"
        />
    <Spinner
        android:id="@+id/spinner_origem"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_frag_destino"
        />
    <Spinner
        android:id="@+id/spinner_destino"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Date picker"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_frag_valor"
            />
    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        >

        <Button
            android:id="@+id/btn_fragment_cancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_fragment_cancel" />

        <Button
            android:id="@+id/btn_fragment_confirm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_fragment_confirm" />
    </LinearLayout>


</LinearLayout>
